--- a/examples/example.html
+++ b/examples/example.html
@@ -4,13 +4,16 @@
 <head>
     <title>dutils - Django JS Utils</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+    <script type="text/javascript" src="/static/js/dutils.js"></script>
+    <script type="text/javascript" src="/static/dutils.conf.urls.example.js"></script>
+
 </head>
 <body>
     <h2>Click the links to get the urls</h2>
     <p><a href="#" onclick="alert(dutils.urls.resolve('dashboard'))">Dashboard</a></p>
     <p><a href="#" onclick="alert(dutils.urls.resolve('time_edit', { project_id: 1, time_id: 2 }))">Edit time</a></p>
 
-    <script type="text/javascript" src="dutils.js"></script>
-    <script type="text/javascript" src="dutils.conf.urls.example.js"></script>
+
 </body>
 </html>
